--- a/src/main/webapp/app/entities/work-order/work-order-grouped.html
+++ b/src/main/webapp/app/entities/work-order/work-order-grouped.html
@@ -37,9 +37,9 @@
             <thead>
             <tr jh-sort="vm.predicate" ascending="vm.reverse" callback="vm.transition()">
                 <th></th>
+                <th jh-sort-by="requestDate" class="extra-small">Project Name</th>
                 <th jh-sort-by="id" class="extra-small">ID </th>
-                <th jh-sort-by="requestDate" class="extra-small">Project Name
-                </th>
+
                 <th jh-sort-by="requestDescription" class="extra-small">PO#</th>
                 <th jh-sort-by="poRecord" class="extra-small">Date </th>
                 <th jh-sort-by="invoiced" class="extra-small">Type </th>
@@ -82,11 +82,6 @@
                         </div>
                     </div>
                 </td>
-                <td class="col-xs-1 extra-small">
-                    <div ng-if="workOrder.id != HIDE">
-                        <a ui-sref="work-order-detail({id:workOrder.id})">{{workOrder.id}}</a>
-                    </div>
-                </td>
                 <td class="col-xs-2 extra-small">
                     <div ng-if="workOrder.id == HIDE">
                         <strong>{{workOrder.project_name}}</strong>
@@ -95,6 +90,10 @@
                         {{workOrder.project_name}}
                     </div>
                 </td>
+                <td class="col-xs-1 extra-small">
+                    <div ng-if="workOrder.id != HIDE">{{workOrder.id}}</div>
+                </td>
+
                 <td class="col-xs-1 extra-small">
                     <div ng-if="workOrder.id != HIDE">
                         {{workOrder.po}}
