--- a/src/main/webapp/app/entities/work-order/work-order-processing-log.html
+++ b/src/main/webapp/app/entities/work-order/work-order-processing-log.html
@@ -1,69 +1,86 @@
 <div>
-	<h3 align="center">Processing Log</h3>
-	<jhi-alert></jhi-alert>
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-xs-4 no-padding-left">
-				<button class="btn btn-primary btn-sm" ui-sref="work-order.add">
-					<span class="glyphicon glyphicon-plus"></span> <span
-						class="hidden-xs"
-						translate="smartLpcApp.workOrder.home.createLabel"> Create
+    <h3 align="center">Processing Log</h3>
+    <jhi-alert></jhi-alert>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-4 no-padding-left">
+                <button class="btn btn-primary btn-sm" ui-sref="work-order.add">
+                    <span class="glyphicon glyphicon-plus"></span> <span
+                    class="hidden-xs"
+                    translate="smartLpcApp.workOrder.home.createLabel"> Create
 						new WorkOrder </span>
-				</button>
-			</div>
-			<!--<div class="col-xs-8 no-padding-right">
-				<form name="searchForm" class="form-inline">
-					<div class="input-group pull-right">
-						<input type="text" class="form-control input-sm"
-							ng-model="vm.searchQuery" id="searchQuery"
-							placeholder="{{ 'smartLpcApp.workOrder.home.search' | translate }}">
-						<span class="input-group-btn width-min">
-							<button class="btn btn-info btn-sm"
-								ng-click="vm.search(vm.searchQuery)">
-								<span class="glyphicon glyphicon-search"></span>
-							</button>
-						</span> <span class="input-group-btn width-min" ng-if="vm.currentSearch">
-							<button class="btn btn-info btn-sm" ng-click="vm.clear()">
-								<span class="glyphicon glyphicon-trash"></span>
-							</button>
-						</span>
-					</div>
-				</form>
-			</div>-->
-		</div>
-	</div>
-	<br />
-	<div class="table-responsive">
-		<table class="jh-table table table-hover">
-			<thead>
-				<tr jh-sort="vm.predicate" ascending="vm.reverse"
-					callback="vm.transition()">
-                    <th></th>
+                </button>
+            </div>
+            <!--<div class="col-xs-8 no-padding-right">
+                <form name="searchForm" class="form-inline">
+                    <div class="input-group pull-right">
+                        <input type="text" class="form-control input-sm"
+                            ng-model="vm.searchQuery" id="searchQuery"
+                            placeholder="{{ 'smartLpcApp.workOrder.home.search' | translate }}">
+                        <span class="input-group-btn width-min">
+                            <button class="btn btn-info btn-sm"
+                                ng-click="vm.search(vm.searchQuery)">
+                                <span class="glyphicon glyphicon-search"></span>
+                            </button>
+                        </span> <span class="input-group-btn width-min" ng-if="vm.currentSearch">
+                            <button class="btn btn-info btn-sm" ng-click="vm.clear()">
+                                <span class="glyphicon glyphicon-trash"></span>
+                            </button>
+                        </span>
+                    </div>
+                </form>
+            </div>-->
+        </div>
+    </div>
+    <br/>
+    <div class="table-responsive">
+        <table class="jh-table table table-hover">
+            <thead>
+            <tr jh-sort="vm.predicate" ascending="vm.reverse"
+                callback="vm.transition()">
+                <th></th>
 
+                <th class="extra-small" ng-click="vm.sort('2')">Project<span class="glyphicon glyphicon-sort"></span>
+                </th>
+                <th class="extra-small" ng-click="vm.sort('1')"><span translate="global.field.id">ID</span> <span
+                    class="glyphicon glyphicon-sort"></span></th>
+                <th class="extra-small" ng-click="vm.sort('3')">Date Recieved<span
+                    class="glyphicon glyphicon-sort"></span></th>
+                <th class="extra-small" ng-click="vm.sort('5')">HDD ID<span class="glyphicon glyphicon-sort"></span>
+                </th>
+                <th class="extra-small" ng-click="vm.sort('6')">Proofs Shipped<span
+                    class="glyphicon glyphicon-sort"></span></th>
+                <th class="extra-small" ng-click="vm.sort('7')">Drive Shipped<span
+                    class="glyphicon glyphicon-sort"></span></th>
+                <th class="extra-small" ng-click="vm.sort('8')">Image Range<span
+                    class="glyphicon glyphicon-sort"></span></th>
+                <th class="extra-small" ng-click="vm.sort('9')">Image Qty.<span class="glyphicon glyphicon-sort"></span>
+                </th>
+                <th class="extra-small" ng-click="vm.sort('10')">Pages 1<span class="glyphicon glyphicon-sort"></span>
+                </th>
+                <th class="extra-small" ng-click="vm.sort('11')">Pages 2<span class="glyphicon glyphicon-sort"></span>
+                </th>
+                <th class="extra-small" ng-click="vm.sort('12')">Notes<span class="glyphicon glyphicon-sort"></span>
+                </th>
+                <th class="extra-small" ng-click="vm.sort('13')">Location<span class="glyphicon glyphicon-sort"></span>
+                </th>
+                <th class="extra-small" ng-click="vm.sort('14')">PKO<span class="glyphicon glyphicon-sort"></span></th>
+                <th class="extra-small" ng-click="vm.sort('15')">Status<span class="glyphicon glyphicon-sort"></span>
+                </th>
+                <th class="extra-small" ng-click="vm.sort('16')">Audited<span class="glyphicon glyphicon-sort"></span>
+                </th>
+                <th class="extra-small" ng-click="vm.sort('17')">Assigned To<span
+                    class="glyphicon glyphicon-sort"></span></th>
+                <th class="extra-small" ng-click="vm.sort('18')">Processed By<span
+                    class="glyphicon glyphicon-sort"></span></th>
+                <th class="extra-small" ng-click="vm.sort('19')">Ingested By<span
+                    class="glyphicon glyphicon-sort"></span></th>
+                <th class="extra-small" ng-click="vm.sort('20')">Completion Date<span
+                    class="glyphicon glyphicon-sort"></span></th>
 
-					<th class="extra-small" ng-click="vm.sort('1')"><span translate="global.field.id">ID</span> <span class="glyphicon glyphicon-sort"  ></span></th>
-					<th class="extra-small" ng-click="vm.sort('2')">Project<span class="glyphicon glyphicon-sort" ></span></th>
-					<th class="extra-small" ng-click="vm.sort('3')">Date Recieved<span class="glyphicon glyphicon-sort"></span></th>
-					<th class="extra-small" ng-click="vm.sort('5')">HDD ID<span class="glyphicon glyphicon-sort" ></span></th>
-					<th class="extra-small" ng-click="vm.sort('6')">Proofs Shipped<span class="glyphicon glyphicon-sort" ></span></th>
-					<th class="extra-small" ng-click="vm.sort('7')">Drive Shipped<span class="glyphicon glyphicon-sort" ></span></th>
-					<th class="extra-small" ng-click="vm.sort('8')">Image Range<span class="glyphicon glyphicon-sort" ></span></th>
-					<th class="extra-small" ng-click="vm.sort('9')">Image Qty.<span class="glyphicon glyphicon-sort" ></span></th>
-					<th class="extra-small" ng-click="vm.sort('10')">Pages 1<span class="glyphicon glyphicon-sort" ></span></th>
-					<th class="extra-small" ng-click="vm.sort('11')">Pages 2<span class="glyphicon glyphicon-sort" ></span></th>
-					<th class="extra-small" ng-click="vm.sort('12')">Notes<span class="glyphicon glyphicon-sort" ></span></th>
-					<th class="extra-small" ng-click="vm.sort('13')">Location<span class="glyphicon glyphicon-sort" ></span></th>
-					<th class="extra-small" ng-click="vm.sort('14')">PKO<span class="glyphicon glyphicon-sort" ></span></th>
-					<th class="extra-small" ng-click="vm.sort('15')">Status<span class="glyphicon glyphicon-sort" ></span></th>
-					<th class="extra-small" ng-click="vm.sort('16')">Audited<span class="glyphicon glyphicon-sort" ></span></th>
-					<th class="extra-small" ng-click="vm.sort('17')">Assigned To<span class="glyphicon glyphicon-sort" ></span></th>
-					<th class="extra-small" ng-click="vm.sort('18')">Processed By<span class="glyphicon glyphicon-sort" ></span></th>
-					<th class="extra-small" ng-click="vm.sort('19')">Ingested By<span class="glyphicon glyphicon-sort" ></span></th>
-					<th class="extra-small" ng-click="vm.sort('20')">Completion Date<span class="glyphicon glyphicon-sort" ></span></th>
-
-				</tr>
-			</thead>
-			<tbody>
+            </tr>
+            </thead>
+            <tbody>
             <tr
                 ng-repeat="workOrder in vm.workOrders.slice(((currentPage-1)*itemsPerPage), ((currentPage)*itemsPerPage))"
                 ng-class="{
@@ -89,57 +106,57 @@
                     </div>
                 </td>
 
-					<td class="extra-small"><a
-						ui-sref="work-order-detail({id:workOrder.id})">{{workOrder.id}}</a></td>
-					<td class="extra-small"><a
-						ui-sref="projects-detail({id:workOrder.project.id})">{{workOrder.projectName}}</a>
-					</td>
+                <td class="extra-small">{{workOrder.projectName}}</td>
 
-					<td class="extra-small">{{workOrder.dateRecieved |
-						date:'mediumDate'}}</td>
-
-					<td class="extra-small">{{workOrder.hddID}}</td>
-
-					<td class="extra-small">{{workOrder.proofShipped}}</td>
-
-					<td class="extra-small">{{workOrder.driveShipped}}</td>
+                <td class="extra-small">{{workOrder.id}}</td>
 
 
-					<td class="extra-small">{{workOrder.imageRange}}</td>
+                <td class="extra-small">{{workOrder.dateRecieved |
+                    date:'mediumDate'}}
+                </td>
 
-					<td class="extra-small">{{workOrder.imageQty}}</td>
+                <td class="extra-small">{{workOrder.hddID}}</td>
 
+                <td class="extra-small">{{workOrder.proofShipped}}</td>
 
-					<td class="extra-small">{{workOrder.page1}}</td>
-
-
-					<td class="extra-small">{{workOrder.page2}}</td>
-
-
-					<td class="extra-small">{{workOrder.notes}}</td>
-
-					<td class="extra-small">{{workOrder.location}}</td>
-
-					<td class="extra-small">{{workOrder.isPko}}</td>
+                <td class="extra-small">{{workOrder.driveShipped}}</td>
 
 
-					<td class="extra-small">{{workOrder.status}}</td>
+                <td class="extra-small">{{workOrder.imageRange}}</td>
+
+                <td class="extra-small">{{workOrder.imageQty}}</td>
 
 
-					<td class="extra-small">{{workOrder.audited}}</td>
-
-					<td class="extra-small">{{workOrder.assignedTo}}</td>
-
-					<td class="extra-small">{{workOrder.processedBy}}</td>
-					<td class="extra-small">{{workOrder.ingestedBy}}</td>
-
-					<td class="extra-small">{{workOrder.completion | date:'mediumDate'}}</td>
+                <td class="extra-small">{{workOrder.page1}}</td>
 
 
-				</tr>
-			</tbody>
-		</table>
-	</div>
+                <td class="extra-small">{{workOrder.page2}}</td>
+
+
+                <td class="extra-small">{{workOrder.notes}}</td>
+
+                <td class="extra-small">{{workOrder.location}}</td>
+
+                <td class="extra-small">{{workOrder.isPko}}</td>
+
+
+                <td class="extra-small">{{workOrder.status}}</td>
+
+
+                <td class="extra-small">{{workOrder.audited}}</td>
+
+                <td class="extra-small">{{workOrder.assignedTo}}</td>
+
+                <td class="extra-small">{{workOrder.processedBy}}</td>
+                <td class="extra-small">{{workOrder.ingestedBy}}</td>
+
+                <td class="extra-small">{{workOrder.completion | date:'mediumDate'}}</td>
+
+
+            </tr>
+            </tbody>
+        </table>
+    </div>
     <div class="text-center">
 
         <uib-pagination class="pagination-sm" total-items="totalItems"
