--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -90,6 +90,7 @@
 	<script src="bower_components/bootstrap-toggle/js/bootstrap-toggle.js"></script>
 	<script src="bower_components/kissui.position/position.js"></script>
 	<script src="bower_components/ngSticky/lib/sticky.js"></script>
+	<script src="bower_components/ng-elif/src/elif.js"></script>
 
 
 
@@ -117,6 +118,7 @@
 	<link
 		href="bower_components/angularMultipleSelect/build/multiple-select.min.css"
 		rel="stylesheet">
+
 	<!--
 
 <script src="bower_components/bootstrap-checkbox-dropdown/bootstrap-dropdown-checkbox.js"></script>
@@ -395,6 +397,7 @@ Latest compiled and minified JavaScript
 	<script src="app/entities/projects/rename.controller.js"></script>
 	<script src="app/entities/projects/select-album.controller.js"></script>
 	<script src="app/entities/projects/select-actor.controller.js"></script>
+	<script src="app/entities/projects/toplevelalbums.controller.js"></script>
 
 	<script src="app/entities/contacts/contacts-update.controller.js"></script>
 	<script src="app/entities/contacts/contacts-add-similar.controller.js"></script>
