--- a/src/main/webapp/app/entities/contacts/contacts-update.html
+++ b/src/main/webapp/app/entities/contacts/contacts-update.html
@@ -38,7 +38,7 @@
 
 
                         <span class="input-group-btn">
-                             <button type="button" ui-sref="lookups.new" data-toggle="modal"
+                             <button type="button" ng-click="vm.addType()"
                                      class="btn btn-success btn-sm"><span
                                  class="glyphicon glyphicon-plus"></span></button>
                          </span>
@@ -101,18 +101,14 @@
 
         <label class="col-md-1 control-label small" for="field_defaultDepartment">Department</label>
         <div class="col-sm-2">
-            <div class="input-group">
 
-                        <span class="input-group-btn">
-                             <button type="button" ui-sref="departments.new" id="openBtn" data-toggle="modal"
-                                     class="btn btn-success btn-sm"><span
-                                 class="glyphicon glyphicon-plus"></span></button>
-                         </span>
+
+
                 <select class="form-control input-sm"
                         ng-options="departments as departments.departmentName for departments in vm.departmentss track by departments.id"
                         id="field_defaultDepartment" name="defaultDepartment"
                         ng-model="vm.contactDTO.contacts.defaultDepartment"></select>
-            </div>
+
         </div>
 
 
