--- a/src/main/webapp/app/entities/projects/projects-update.html
+++ b/src/main/webapp/app/entities/projects/projects-update.html
@@ -1,8 +1,6 @@
-
-
 <form name="editForm" role="form" novalidate ng-submit="vm.save()">
     <div class="row fixed">
-        <div class="col-xs-12" >
+        <div class="col-xs-12">
             <br>
             <button type="submit" class="btn btn-xs btn btn-primary"
                     ng-disabled="editForm.$invalid || isSaving">Save
@@ -16,9 +14,11 @@
                     class="btn btn-xs btn btn-primary">Save and Next
             </button>
 
-            <button type="button" ng-disabled="vm.prevNext.prev === null" ui-sref="projects.edit({id:vm.prevNext.prev})" ui-sref-opts="{reload: true, notify: true}" class="btn btn-xs btn btn-primary">Previous
+            <button type="button" ng-disabled="vm.prevNext.prev === null" ui-sref="projects.edit({id:vm.prevNext.prev})"
+                    ui-sref-opts="{reload: true, notify: true}" class="btn btn-xs btn btn-primary">Previous
             </button>
-            <button type="button" ng-disabled="vm.prevNext.next === null" ui-sref="projects.edit({id:vm.prevNext.next})" ui-sref-opts="{reload: true, notify: true}" class="btn btn-xs btn btn-primary">Next
+            <button type="button" ng-disabled="vm.prevNext.next === null" ui-sref="projects.edit({id:vm.prevNext.next})"
+                    ui-sref-opts="{reload: true, notify: true}" class="btn btn-xs btn btn-primary">Next
             </button>
 
             <button type="button" class="btn btn-xs btn btn-primary" ng-click="vm.enableDisableProject('disable')">
@@ -40,7 +40,10 @@
                     Enable
                 </button>
             </div>
-            <button type="button" class="btn btn-xs btn btn-primary" ui-sref="projects-detail({id:vm.projectsDTO.projects.id})" ui-sref-opts="{reload: true, notify: true}">View</button>
+            <button type="button" class="btn btn-xs btn btn-primary"
+                    ui-sref="projects-detail({id:vm.projectsDTO.projects.id})"
+                    ui-sref-opts="{reload: true, notify: true}">View
+            </button>
             <button type="button" class="btn btn-xs btn btn-primary" ng-click="vm.getCount(vm.projectsDTO.projects)">GB
                 Count
             </button>
@@ -49,7 +52,7 @@
         </div>
     </div>
     <br>
-    <h2 align="center" >Project</h2>
+    <h2 align="center">Project</h2>
     <hr>
     <div class="row">
 
@@ -77,7 +80,8 @@
                                               ng-model="vm.projectsDTO.projects.galleryview"> &nbspGallery
             View &nbsp
         </label> <label class="small"> <input type="checkbox"
-                                              ng-model="vm.projectsDTO.projects.topLevelAlbums"> &nbspTop
+                                              ng-model="vm.projectsDTO.projects.topLevelAlbums"> <!--<a href ng-click="vm.topLevel()"> &nbspTop
+            level Albums &nbsp</a>-->&nbspTop
             level Albums &nbsp
         </label> <label class="small"> <input type="checkbox"
                                               ng-model="vm.projectsDTO.projects.isAsset" readonly>
@@ -113,7 +117,7 @@
 				</span> <input id="field_vm.projects.owner" type="text"
                                class="form-control input-sm"
                                ng-model="vm.projectsDTO.projects.owner.fullName"
-                               ng-click="vm.lookUpContact(vm.projectsDTO.projects.owner.id)" >
+                               ng-click="vm.lookUpContact(vm.projectsDTO.projects.owner.id)">
             </div>
 
         </div>
@@ -156,10 +160,10 @@
                for="field_defaultDepartment">Department</label>
         <div class="col-sm-2">
 
-				<select class="form-control input-sm"
-                                ng-options="departments as departments.departmentName for departments in vm.departmentss track by departments.id"
-                                id="field_defaultDepartment" name="defaultDepartment"
-                                ng-model="vm.projectsDTO.projects.department"></select>
+            <select class="form-control input-sm"
+                    ng-options="departments as departments.departmentName for departments in vm.departmentss track by departments.id"
+                    id="field_defaultDepartment" name="defaultDepartment"
+                    ng-model="vm.projectsDTO.projects.department"></select>
         </div>
     </div>
 
@@ -170,7 +174,7 @@
             <div class="input-group">
 
 				<span class="input-group-btn">
-					<button type="button" ng-click="vm.addStatus()" class="btn btn-success btn-sm" >
+					<button type="button" ng-click="vm.addStatus()" class="btn btn-success btn-sm">
 						<span class="glyphicon glyphicon-plus "></span>
 					</button>
 				</span> <select class="form-control input-sm" name="status"
@@ -181,8 +185,8 @@
         <label class="col-md-1 control-label small" for="field_type">Type</label>
         <div class="col-sm-2">
             <select class="form-control input-sm" name="type" id="field_type"
-                                ng-model="vm.projectsDTO.projects.type"
-                                ng-options="lookups as lookups.textValue for lookups in vm.projectType track by lookups.id"></select>
+                    ng-model="vm.projectsDTO.projects.type"
+                    ng-options="lookups as lookups.textValue for lookups in vm.projectType track by lookups.id"></select>
 
         </div>
 
@@ -241,14 +245,13 @@
     </div>
 
     <div class="row">
-        <label class="col-md-1 control-label small" for="field_invoiceCreated">Invoice
+        <label class="col-md-1 control-label small">Invoice
             Created </label>
         <div class="col-sm-2">
-            <select class="form-control input-sm" id="field_invoiceCreated"
-                    ng-model="vm.projectsDTO.projects.invoiceCreated">
-                <option value="387">Yes</option>
-                <option value="388">No</option>
-                <option value="389">N/A</option>
+            <select class="form-control input-sm"
+                    ng-model="vm.projectsDTO.projects.invoiceCreated"
+                    ng-options="excl.id as excl.value for excl in vm.invoiceCreated">
+                <option>{{excl.value}}</option>
             </select>
         </div>
 
@@ -355,7 +358,7 @@
 
                         </small><span class="input-group-addon input-sm"><small>PO
 								{{$index+1}}</small></span> <input type="text" class="form-control input-sm"
-                                                                 ng-model="po.po_number">
+                                                                   ng-model="po.po_number">
                     </div>
                 </div>
                 <div class="col-lg-3">
@@ -725,7 +728,8 @@
 						</button>
 					</span> <input id="field_vm.projects.labInfo" type="text"
                                    class="form-control input-sm"
-                                   ng-model="vm.lab.contact.fullName" ng-click="vm.lookUpContact(vm.lab.contact.id)" readonly>
+                                   ng-model="vm.lab.contact.fullName" ng-click="vm.lookUpContact(vm.lab.contact.id)"
+                                   readonly>
             </div>
 
         </div>
@@ -922,7 +926,8 @@
 				</span> <input id="field_vm.projects.productCompany" type="text"
                                class="form-control input-sm"
                                ng-model="vm.projectsDTO.projects.productionCompanyContact.fullName"
-                               ng-click="vm.lookUpContact(vm.projectsDTO.projects.productionCompanyContact.id)" readonly>
+                               ng-click="vm.lookUpContact(vm.projectsDTO.projects.productionCompanyContact.id)"
+                               readonly>
             </div>
 
         </div>
@@ -1094,7 +1099,8 @@
 							<span class="glyphicon glyphicon-list-alt btn-xs"></span>
 						</button>
 					</span> <input type="text" id="field_vm.projects.talents" class="input-xs"
-                                   ng-model="tags.contact.fullName" ng-click="vm.lookUpContact(tags.contact.id)"  readonly/>
+                                   ng-model="tags.contact.fullName" ng-click="vm.lookUpContact(tags.contact.id)"
+                                   readonly/>
                 </div>
 
             </td>
@@ -1185,10 +1191,10 @@
             <th class="small">Disabled</th>
             <th class="small"></th>
         </tr>
-       <!-- <tr ng-repeat="execs in vm.projectsDTO.contactPrivileges | filter:{exec:true}">-->
-        <tr ng-repeat="execs in vm.projectsDTO.contactPrivileges" ng-if="execs.exec === true || execs.restartRole ==='ALBUMVIEWER'">
+         <tr ng-repeat="execs in vm.projectsDTO.contactPrivileges  | filter:isExecORAlbumViewer">
+       <!-- <tr ng-repeat="execs in vm.projectsDTO.contactPrivileges" ng-if="(execs.exec === true && execs.internal === false) || (execs.restartRole ==='ALBUMVIEWER')">-->
 
-        <td class="small">{{$index + 1}}</td>
+            <td class="small">{{$index+1}}</td>
             <td class="col-xs-1">
 
                 <div class="input-group">
@@ -1200,16 +1206,19 @@
 							<span class="glyphicon glyphicon-list-alt btn-xs"></span>
 						</button>
 					</span> <input type="text" id="field_vm.projects.execs" class="input-xs"
-                                   ng-model="execs.contact.fullName" ng-click="vm.lookUpContact(execs.contact.id)" readonly/>
+                                   ng-model="execs.contact.fullName" ng-click="vm.lookUpContact(execs.contact.id)"
+                                   readonly/>
                 </div>
 
             </td>
             <td><input type="text" ng-model="execs.contact.username" readonly/></td>
             <td><input type="text" ng-model="execs.contact.password" readonly/></td>
+
             <td><select ng-model="execs.downloadType"
                         ng-options="excl.id as excl.value for excl in vm.downloadType">
                 <option>{{excl.value}}</option>
             </select></td>
+
             <td><input type="checkbox" ng-model="execs.print"/></td>
             <td><input type="checkbox" ng-model="execs.captioning"/></td>
             <td><input type="checkbox" ng-model="execs.email"/></td>
@@ -1255,7 +1264,13 @@
 
 
     <hr>
-    EXPANDED TALENT INFORMATION
+    <div class="row">
+        <div class="col-sm-3">
+            <h4>
+                <strong>EXPANDED TALENT INFORMATION</strong>
+            </h4>
+        </div>
+    </div>
     <div
         ng-repeat="tags in vm.projectsDTO.projectRoles |  filter: { relationship_type: 'PKO_Tag'} | filter: isGeneric">
 
@@ -1283,60 +1298,109 @@
             </div>
         </div>
         <!--Display Primary Contact-->
+        <div ng-if="tags.contact.fullName !== vm.relatedContact[$index].fullName">
 
+            <div class="row">
+                <label class="col-md-1 control-label small">Contact</label>
+                <div class="col-sm-2">
+                    <input type="text" class="form-control input-sm"
+                           ng-model="vm.relatedContact[$index].fullName" readonly>
+                </div>
+                <label class="col-md-1 control-label small">Type</label>
+                <div class="col-sm-2">
+                    <input type="text" class="form-control input-sm"
+                           ng-model="vm.relatedContact[$index].type.textValue" readonly>
+                </div>
+                <label class="col-md-1 control-label small">Company</label>
+                <div class="col-sm-2">
+                    <input type="text" class="form-control input-sm"
+                           ng-model="vm.relatedContact[$index].companyContact.fullName"
+                           readonly>
+                </div>
 
-        <div class="row">
-            <label class="col-md-1 control-label small">Contact</label>
-            <div class="col-sm-2">
-                <input type="text" class="form-control input-sm"
-                       ng-model="vm.relatedContact[$index].fullName" readonly>
             </div>
-            <label class="col-md-1 control-label small">Type</label>
-            <div class="col-sm-2">
-                <input type="text" class="form-control input-sm"
-                       ng-model="vm.relatedContact[$index].type.textValue" readonly>
+            <div class="row">
+                <label class="col-md-1 control-label small">Phone</label>
+                <div class="col-sm-2">
+                    <input type="text" class="form-control input-sm"
+                           ng-model="vm.relatedContact[$index].phoneCompany" readonly>
+                </div>
+                <label class="col-md-1 control-label small">Email</label>
+                <div class="col-sm-2">
+                    <input type="text" class="form-control input-sm"
+                           ng-model="vm.relatedContact[$index].email" readonly>
+                </div>
+                <label class="col-md-1 control-label small">Mobile</label>
+                <div class="col-sm-2">
+                    <input type="text" class="form-control input-sm"
+                           ng-model="vm.relatedContact[$index].phoneMobile" readonly>
+                </div>
+
             </div>
-            <label class="col-md-1 control-label small">Company</label>
-            <div class="col-sm-2">
-                <input type="text" class="form-control input-sm"
-                       ng-model="vm.relatedContact[$index].companyContact.fullName"
-                       readonly>
+            <div class="row">
+                <label class="col-md-1 control-label small">Asst/Notes</label>
+                <div class="col-sm-11">
+                    <input type="text" class="form-control input-xs"
+                           ng-model="vm.relatedContact[$index].notes" readonly>
+                </div>
             </div>
+            <div class="row">
+                <label class="col-md-1 control-label small">Notes</label>
+                <div class="col-sm-11">
+                    <input type="text" class="form-control input-sm" ng-model="tags.notes">
+                </div>
+            </div>
+            <br>
 
         </div>
-        <div class="row">
-            <label class="col-md-1 control-label small">Phone</label>
-            <div class="col-sm-2">
-                <input type="text" class="form-control input-sm"
-                       ng-model="vm.relatedContact[$index].phoneCompany" readonly>
+
+        <div ng-else>
+
+            <div class="row">
+                <label class="col-md-1 control-label small">Contact</label>
+                <div class="col-sm-2">
+                    <input type="text" class="form-control input-sm" readonly>
+                </div>
+                <label class="col-md-1 control-label small">Type</label>
+                <div class="col-sm-2">
+                    <input type="text" class="form-control input-sm" readonly>
+                </div>
+                <label class="col-md-1 control-label small">Company</label>
+                <div class="col-sm-2">
+                    <input type="text" class="form-control input-sm" readonly>
+                </div>
+
             </div>
-            <label class="col-md-1 control-label small">Email</label>
-            <div class="col-sm-2">
-                <input type="text" class="form-control input-sm"
-                       ng-model="vm.relatedContact[$index].email" readonly>
+            <div class="row">
+                <label class="col-md-1 control-label small">Phone</label>
+                <div class="col-sm-2">
+                    <input type="text" class="form-control input-sm" readonly>
+                </div>
+                <label class="col-md-1 control-label small">Email</label>
+                <div class="col-sm-2">
+                    <input type="text" class="form-control input-sm" readonly>
+                </div>
+                <label class="col-md-1 control-label small">Mobile</label>
+                <div class="col-sm-2">
+                    <input type="text" class="form-control input-sm" readonly>
+                </div>
+
             </div>
-            <label class="col-md-1 control-label small">Mobile</label>
-            <div class="col-sm-2">
-                <input type="text" class="form-control input-sm"
-                       ng-model="vm.relatedContact[$index].phoneMobile" readonly>
+            <div class="row">
+                <label class="col-md-1 control-label small">Asst/Notes</label>
+                <div class="col-sm-11">
+                    <input type="text" class="form-control input-xs" readonly>
+                </div>
             </div>
+            <div class="row">
+                <label class="col-md-1 control-label small">Notes</label>
+                <div class="col-sm-11">
+                    <input type="text" class="form-control input-sm" ng-model="tags.notes">
+                </div>
+            </div>
+            <br>
 
         </div>
-        <div class="row">
-            <label class="col-md-1 control-label small">Asst/Notes</label>
-            <div class="col-sm-11">
-                <input type="text" class="form-control input-xs"
-                       ng-model="vm.relatedContact[$index].notes" readonly>
-            </div>
-        </div>
-        <div class="row">
-            <label class="col-md-1 control-label small">Notes</label>
-            <div class="col-sm-11">
-                <input type="text" class="form-control input-sm" ng-model="tags.notes">
-            </div>
-        </div>
-        <br>
-
         <hr>
     </div>
 
@@ -1361,7 +1425,8 @@
 					</button>
 				</span> <input type="text" id="field_vm.projects.parentInfo"
                                class="form-control input-sm"
-                               ng-model="vm.projectsDTO.projects.parentCompanyContact.fullName" ng-click="vm.lookUpContact(vm.projectsDTO.projects.parentCompanyContact.id)">
+                               ng-model="vm.projectsDTO.projects.parentCompanyContact.fullName"
+                               ng-click="vm.lookUpContact(vm.projectsDTO.projects.parentCompanyContact.id)">
             </div>
         </div>
     </div>
