--- a/src/main/webapp/app/entities/work-order/work-order-add.html
+++ b/src/main/webapp/app/entities/work-order/work-order-add.html
@@ -100,7 +100,7 @@
 <form name="editForm" role="form" novalidate ng-submit="vm.save()">
     <div class="row fixed">
 
-
+        <br>
         <button type="button" class="btn btn-xs btn btn-primary"
                 ng-click="vm.save()">Save
         </button>
@@ -115,7 +115,7 @@
     <br>
 
     <div class="row">
-        <div class="col-xs-4">
+        <div class="col-xs-4 col-xs-offset-8">
             <label class="small"> <input type="checkbox" id="isPrint"
                                          ng-model="vm.workOrder.isPrint" ng-init="vm.workOrder.isPrint=false">
                 &nbspPrint &nbsp
@@ -273,6 +273,15 @@
                 <div class="col-sm-2">
                     <input type="text" class="form-control input-sm"
                            ng-model="vm.workOrder.processingLocation">
+                </div>
+
+                <label class="col-md-1 control-label small" for="textinput">PKO</label>
+                <div class="col-sm-2">
+                    <select class="form-control input-sm"
+                            name="status" ng-model="vm.workOrder.processing_pko_flag"
+                            ng-options="workOrderType as workOrderType.textValue for workOrderType in vm.processingPKOFlag track by workOrderType.id">
+                        <option value=""></option>
+                    </select>
                 </div>
             </div>
             <div class="row">
